# Mean

./: CMakeLists.txt  compile_commands.json  readme.md
include/: mean.hpp
include/mean/: mean.hpp  types.hpp
src/: mean.cpp  types.cpp
test/: CMakeLists.txt
test/src/: main.cpp
